--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "soundfont2",
-  "version": "0.3.0",
-  "description": "A SoundFont2 parser for Node.js and web browsers",
+  "name": "soundfont3",
+  "version": "0.0.1",
+  "description": "A SoundFont3 parser for Node.js and web browsers",
   "main": "lib/SoundFont2.node.js",
   "module": "lib/SoundFont2.js",
   "typings": "typings/index.d.ts",
   "keywords": [
-    "soundfont2",
+    "soundfont3",
     "soundfont",
-    "sf2",
+    "sf3",
     "midi",
     "synthesizer"
   ],
-  "author": "Maarten Zuidhoorn <maarten@zuidhoorn.com>",
-  "repository": "https://github.com/Mrtenz/soundfont2.git",
+  "author": "Meng Lin <menglinmaker@gmail.com>",
+  "repository": "https://github.com/musidi-org/soundfont3.git",
   "license": "MIT",
   "scripts": {
     "tslint": "tslint --project .",
