--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "repository": "https://github.com/musidi-org/soundfont3.git",
   "license": "MIT",
   "scripts": {
-    "tslint": "tslint --project .",
+    "lint": "eslint ./src",
     "test": "jest",
     "prettier:diff": "prettier --write --config ./.prettierrc --list-different 'src/**/*.ts'",
     "clean": "rimraf ./lib ./typings",
-    "build": "yarn run build:declarations && webpack",
+    "build": "pnpm run build:declarations && webpack",
     "build:declarations": "tsc --project tsconfig.json --declaration --declarationDir typings --emitDeclarationOnly",
-    "prepublishOnly": "yarn run clean && cross-env NODE_ENV=development yarn run build",
+    "prepublishOnly": "pnpm run clean && cross-env NODE_ENV=development yarn run build",
     "docs:serve": "gitbook serve",
     "docs:build": "gitbook build",
-    "docs:deploy": "yarn run docs:build && gh-pages -d _book"
+    "docs:deploy": "pnpm run docs:build && gh-pages -d _book"
   },
   "files": [
     "lib",
@@ -33,35 +33,36 @@
     "typings"
   ],
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/jest": "^23.3.12",
-    "@types/node": "^10.12.18",
-    "@types/webpack": "^4.4.22",
-    "@types/webpack-merge": "^4.1.3",
-    "@types/webpack-node-externals": "^1.6.3",
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@eslint/js": "^9.5.0",
+    "@types/jest": "^23.3.14",
+    "@types/node": "^10.17.60",
+    "@types/webpack": "^4.41.38",
+    "@types/webpack-merge": "^4.1.5",
+    "@types/webpack-node-externals": "^1.7.1",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
-    "cross-env": "^5.2.0",
-    "gh-pages": "^2.0.1",
+    "babel-loader": "^8.3.0",
+    "cross-env": "^5.2.1",
+    "eslint": "^9.5.0",
+    "gh-pages": "^2.2.0",
     "gitbook-cli": "^2.3.2",
+    "globals": "^15.6.0",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.15.3",
-    "rimraf": "^2.6.3",
+    "lint-staged": "^8.2.1",
+    "prettier": "^1.19.1",
+    "rimraf": "^2.7.1",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.12.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-microsoft-contrib": "^6.0.0",
-    "typescript": "^3.2.2",
-    "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1",
-    "webpack-merge": "^4.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.0",
+    "webpack": "^4.47.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   },
   "lint-staged": {
@@ -73,7 +74,7 @@
   "husky": {
     "hooks": {
       "post-commit": "git update-index --again",
-      "pre-commit": "yarn run tslint && yarn run test && lint-staged"
+      "pre-commit": "pnpm run lint && pnpm run test && lint-staged"
     }
   }
 }
