--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build": "pnpm run build:declarations && webpack",
     "build:declarations": "tsc --project tsconfig.json --declaration --declarationDir typings --emitDeclarationOnly",
     "prepublishOnly": "pnpm run clean && cross-env NODE_ENV=development yarn run build",
-    "docs:serve": "gitbook serve",
-    "docs:build": "gitbook build",
+    "docs:serve": "mdbook serve",
+    "docs:build": "mdbook build",
     "docs:deploy": "pnpm run docs:build && gh-pages -d _book"
   },
   "files": [
@@ -48,7 +48,6 @@
     "cross-env": "^5.2.1",
     "eslint": "^9.5.0",
     "gh-pages": "^2.2.0",
-    "gitbook-cli": "^2.3.2",
     "globals": "^15.6.0",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
