--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   "scripts": {
     "lint": "eslint ./src",
     "test": "jest",
-    "prettier:diff": "prettier --write --config ./.prettierrc --list-different 'src/**/*.ts'",
-    "clean": "rimraf ./lib ./typings",
-    "build": "pnpm run build:declarations && webpack",
-    "build:declarations": "tsc --project tsconfig.json --declaration --declarationDir typings --emitDeclarationOnly",
-    "prepublishOnly": "pnpm run clean && cross-env NODE_ENV=development yarn run build",
+    "prettier": "prettier --write --config ./.prettierrc --list-different 'src/**/*.ts'",
+    "build": "tsc --project tsconfig.json --declaration --declarationDir typings --emitDeclarationOnly && webpack",
+    "prepublishOnly": "rm -rf ./lib ./typings && cross-env NODE_ENV=development yarn run build",
     "docs:serve": "mdbook serve",
     "docs:build": "mdbook build",
     "docs:deploy": "pnpm run docs:build && gh-pages -d _book"
@@ -53,7 +51,6 @@
     "jest": "^23.6.0",
     "lint-staged": "^8.2.1",
     "prettier": "^1.19.1",
-    "rimraf": "^2.7.1",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
