--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lint-staged": "^8.2.1",
     "prettier": "^1.19.1",
     "ts-jest": "^29.1.5",
-    "ts-node": "^7.0.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0",
@@ -63,7 +63,7 @@
   },
   "lint-staged": {
     "*.ts": [
-      "prettier --write --config ./.prettierrc --config-precedence file-override",
+      "prettier --write --config ./.prettierrc --list-different 'src/**/*.ts'",
       "git add"
     ]
   },
