--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "repository": "https://github.com/musidi-org/soundfont3.git",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint ./src",
+    "lint": "eslint '**/*.ts'",
     "test": "jest",
     "prettier": "prettier --write --config ./.prettierrc --list-different '**/*.ts'",
     "build": "tsc --project tsconfig.json --declaration --declarationDir typings --emitDeclarationOnly && webpack",
@@ -55,7 +55,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.0",
+    "typescript-eslint": "^7.13.1",
     "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2",
