--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "husky": "^1.3.1",
     "jest": "^29.7.0",
     "lint-staged": "^8.2.1",
+    "node-web-audio-api": "^0.21.1",
     "prettier": "^3.3.2",
+    "smplr": "^0.15.1",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
