--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "prettier": "prettier --write --config ./.prettierrc --list-different '**/*.ts'",
     "build": "tsc --project tsconfig.json --declaration --declarationDir typings --emitDeclarationOnly && webpack",
     "prepublishOnly": "rm -rf ./lib ./typings && cross-env NODE_ENV=development yarn run build",
-    "docs:serve": "mdbook serve",
-    "docs:build": "mdbook build",
-    "docs:deploy": "pnpm run docs:build && gh-pages -d book"
+    "docs:build": "vitepress build docs",
+    "docs:deploy": "pnpm run docs:build && gh-pages -d docs/.vitepress/dist",
+    "docs:dev": "vitepress dev docs",
+    "docs:preview": "vitepress preview docs"
   },
   "files": [
     "lib",
@@ -56,6 +57,7 @@
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
+    "vitepress": "^1.2.3",
     "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2",
