--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "prettier": "prettier --write --config ./.prettierrc --list-different '**/*.ts'",
     "build": "tsc --project tsconfig.json --declaration --declarationDir typings --emitDeclarationOnly && webpack",
     "prepublishOnly": "rm -rf ./lib ./typings && cross-env NODE_ENV=development yarn run build",
-    "docs:build": "vitepress build docs",
-    "docs:deploy": "pnpm run docs:build && gh-pages -d docs/.vitepress/dist",
-    "docs:dev": "vitepress dev docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist",
+    "docs:dev": "vitepress dev docs"
   },
   "files": [
     "lib",
