DX: Set base url to root for auto import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
 
-    "baseUrl": "src",
+    "baseUrl": "/",
     "outDir": "dist",
     "allowSyntheticDefaultImports": true,
     "module": "NodeNext",
