--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/webpack": "^4.41.38",
     "@types/webpack-merge": "^4.1.5",
     "@types/webpack-node-externals": "^1.7.1",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^8.3.0",
     "cross-env": "^5.2.1",
     "eslint": "^9.5.0",
@@ -48,15 +49,18 @@
     "jest": "^29.7.0",
     "lint-staged": "^8.2.1",
     "node-web-audio-api": "^0.21.1",
+    "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "riff-file": "^1.0.3",
     "smplr": "^0.15.1",
+    "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
     "vitepress": "^1.2.3",
+    "vue": "^3.4.31",
     "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2",
@@ -72,6 +76,12 @@
     "hooks": {
       "post-commit": "git update-index --again",
       "pre-commit": "pnpm run lint && pnpm run test && lint-staged"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "tailwindcss": {},
+      "autoprefixer": {}
     }
   }
 }
