DX: Prefer Rollup for bundling over Webpack

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
+# Dependency
 node_modules/
-coverage
-.env
-.DS_Store
 
-# Webpack
-lib
-typings
+# Test
+coverage
+
+# Build
+dist
 
 # Docs
-book
 docs/.vitepress/dist
 docs/.vitepress/cache
+
+# System
+.env
+.DS_Store
