--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lint": "eslint '**/*.ts'",
     "test": "jest --coverage",
     "prettier": "prettier --write --config ./.prettierrc --list-different '**/*.ts'",
-    "build": "tsc --project tsconfig.json --declaration --declarationDir typings --emitDeclarationOnly && webpack",
-    "prepublishOnly": "rm -rf ./lib ./typings && cross-env NODE_ENV=development yarn run build",
+    "build": "rollup -c",
     "docs:deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist",
     "docs:start": "vitepress build docs && vitepress preview docs",
     "docs:dev": "vitepress dev docs"
@@ -35,6 +34,7 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.5.0",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^23.3.14",
     "@types/node": "^10.17.60",
     "@types/webpack": "^4.41.38",
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.19",
     "babel-loader": "^8.3.0",
     "cross-env": "^5.2.1",
+    "esbuild": "^0.23.0",
     "eslint": "^9.5.0",
     "gh-pages": "^2.2.0",
     "husky": "^1.3.1",
@@ -52,11 +53,15 @@
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "riff-file": "^1.0.3",
+    "rollup": "^4.18.1",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild": "^6.1.1",
     "smplr": "^0.15.1",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "tslib": "^2.6.3",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
     "vitepress": "^1.2.3",
@@ -86,5 +91,6 @@
   },
   "dependencies": {
     "audio-decode": "^2.2.0"
-  }
+  },
+  "type": "module"
 }
