--- a/package.json
+++ b/package.json
@@ -30,23 +30,14 @@
     "typings"
   ],
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.5.0",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^23.3.14",
     "@types/node": "^10.17.60",
-    "@types/webpack": "^4.41.38",
-    "@types/webpack-merge": "^4.1.5",
-    "@types/webpack-node-externals": "^1.7.1",
     "autoprefixer": "^10.4.19",
-    "babel-loader": "^8.3.0",
-    "cross-env": "^5.2.1",
     "esbuild": "^0.23.0",
     "eslint": "^9.5.0",
     "gh-pages": "^2.2.0",
-    "husky": "^1.3.1",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^8.2.1",
     "node-web-audio-api": "^0.21.1",
@@ -59,17 +50,10 @@
     "smplr": "^0.15.1",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.5",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "tslib": "^2.6.3",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
     "vitepress": "^1.2.3",
-    "vue": "^3.4.31",
-    "webpack": "^4.47.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "vue": "^3.4.31"
   },
   "lint-staged": {
     "*.ts": [
