--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/jest": "^23.3.14",
     "@types/node": "^10.17.60",
     "autoprefixer": "^10.4.19",
