--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint '**/*.ts'",
     "test": "jest --coverage",
     "prettier": "prettier --write --config ./.prettierrc --list-different '**/*.ts'",
-    "build": "rimraf dist && rollup -c",
+    "build": "rimraf dist &&rollup -c",
     "docs:deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist",
     "docs:start": "vitepress build docs && vitepress preview docs",
     "docs:dev": "vitepress dev docs"
@@ -28,6 +28,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@changesets/cli": "^2.27.7",
     "@eslint/js": "^9.5.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/jest": "^23.3.14",
