--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "smplr": "^0.15.1",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
     "vitepress": "^1.2.3",
