--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Setup FFmpeg
+        uses: federicocarboni/setup-ffmpeg@v3
       - uses: pnpm/action-setup@v4
         with:
           version: latest
