--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,5 +19,5 @@ jobs:
           node-version: latest
           cache: "pnpm"
 
-      - run: pnpm install --frozen-lockfile
+      - run: pnpm install
       - run: pnpm run lint && pnpm run test && pnpm run build
