--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: latest
-      - uses: actions/setup-node@v4x
+      - uses: actions/setup-node@v4
         with:
           node-version: latest
           cache: "pnpm"
