--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "rimraf dist && rollup -c && pnpm run prettier",
     "docs:deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist",
     "docs:start": "vitepress build docs && vitepress preview docs",
-    "docs:dev": "vitepress dev docs"
+    "docs:dev": "vitepress dev docs",
+    "release": "pnpm run build && changeset publish"
   },
   "files": [
     "dist"
