--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soundfont3",
+  "name": "@menglinmaker/soundfont3",
   "version": "0.0.2",
   "description": "A SoundFont3 parser for Node.js and web browsers",
   "main": "dist/SoundFont3.js",
