--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "repository": "https://github.com/musidi-org/soundfont3.git",
   "license": "MIT",
   "scripts": {
+    "format": "prettier --write --list-different .",
     "lint": "eslint '**/*.ts' && tsc",
     "test": "jest --coverage",
-    "prettier": "prettier --write --config ./.prettierrc --list-different '**/*.ts'",
     "build": "rimraf dist && rollup -c && pnpm run prettier && pnpm link .",
     "docs:deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist",
     "docs:start": "vitepress build docs && vitepress preview docs",
