--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "license": "MIT",
   "scripts": {
     "format": "prettier --write --list-different .",
-    "lint": "eslint '**/*.ts' && tsc",
+    "lint": "eslint --fix && tsc --noEmit",
     "test": "jest --coverage",
     "build": "rimraf dist && rollup -c && pnpm link .",
-    "docs:deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist",
-    "docs:start": "vitepress build docs && vitepress preview docs",
+    "release": "pnpm run build && changeset publish",
     "docs:dev": "vitepress dev docs",
-    "release": "pnpm run build && changeset publish"
+    "docs:start": "vitepress build docs && vitepress preview docs",
+    "docs:deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist"
   },
   "files": [
     "dist"
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.23.0",
     "eslint": "^9.5.0",
+    "eslint-plugin-compat": "^5.0.0",
     "gh-pages": "^2.2.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
