--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@changesets/cli": "^2.27.7",
     "@eslint/js": "^9.5.0",
     "@types/node": "^10.17.60",
+    "@vitest/coverage-v8": "^2.0.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.5.0",
     "eslint-plugin-compat": "^5.0.0",
@@ -52,6 +53,7 @@
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
     "vitepress": "^1.2.3",
+    "vitest": "^2.0.2",
     "vue": "^3.4.31"
   },
   "dependencies": {
