--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "format": "prettier --write --list-different .",
+    "format": "pretty-quick --write --list-different .",
     "lint": "eslint --fix & tsc --noEmit --incremental",
     "test": "vitest",
     "build": "rimraf dist && rollup -c && pnpm link .",
@@ -40,7 +40,7 @@
     "eslint-plugin-compat": "^5.0.0",
     "gh-pages": "^2.2.0",
     "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
+    "pretty-quick": "^4.0.0",
     "riff-file": "^1.0.3",
     "rimraf": "^6.0.1",
     "rollup": "^4.18.1",
