--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "typings": "dist/index.d.ts",
-  "files": ["dist"],
-  "keywords": ["soundfont3", "soundfont", "sf3", "midi", "synthesizer"],
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "soundfont3",
+    "soundfont",
+    "sf3",
+    "midi",
+    "synthesizer"
+  ],
   "author": "Meng Lin <menglinmaker@gmail.com>",
   "repository": "https://github.com/menglinmaker/soundfont3.git",
   "license": "MIT",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "format": "biome format --write --log-level=warn --verbose --files-ignore-unknown=true",
+    "format": "biome check --write --verbose",
     "lint": "eslint --fix & tsc --noEmit --incremental",
     "test": "vitest",
     "build": "rimraf dist && rollup -c && pnpm link .",
@@ -25,7 +33,6 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@changesets/cli": "^2.27.7",
-    "@eslint/js": "^9.5.0",
     "@types/node": "^10.17.60",
     "@vitest/coverage-v8": "^2.0.2",
     "autoprefixer": "^10.4.19",
@@ -43,7 +50,6 @@
     "soundfont3": "file:.",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.1",
     "vitepress": "^1.2.3",
     "vitest": "^2.0.2",
     "vue": "^3.4.31"
@@ -61,5 +67,7 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": ["defaults"]
+  "browserslist": [
+    "defaults"
+  ]
 }
