--- a/package.json
+++ b/package.json
@@ -5,16 +5,8 @@
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "typings": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "soundfont3",
-    "soundfont",
-    "sf3",
-    "midi",
-    "synthesizer"
-  ],
+  "files": ["dist"],
+  "keywords": ["soundfont3", "soundfont", "sf3", "midi", "synthesizer"],
   "author": "Meng Lin <menglinmaker@gmail.com>",
   "repository": "https://github.com/menglinmaker/soundfont3.git",
   "license": "MIT",
@@ -67,7 +59,5 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": [
-    "defaults"
-  ]
+  "browserslist": ["defaults"]
 }
