--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "format": "biome check --write --verbose",
     "lint": "eslint --fix & tsc --noEmit --incremental",
     "test": "vitest",
-    "build": "unbuild && pnpm link .",
+    "build": "unbuild",
     "release": "changeset publish",
     "docs:dev": "vitepress dev docs",
     "docs:start": "vitepress build docs && vitepress preview docs",
@@ -44,7 +44,6 @@
     "riff-file": "^1.0.3",
     "simple-git-hooks": "^2.11.1",
     "smplr": "^0.15.1",
-    "soundfont3": "file:.",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
