--- a/package.json
+++ b/package.json
@@ -2,28 +2,21 @@
   "name": "@menglinmaker/soundfont3",
   "version": "0.3.0",
   "description": "A SoundFont3 parser for Node.js and web browsers",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      },
-      "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
-      }
+    "import": {
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
+    },
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
     }
   },
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "soundfont3",
-    "soundfont",
-    "sf3",
-    "midi",
-    "synthesizer"
-  ],
+  "files": ["dist"],
+  "keywords": ["soundfont3", "soundfont", "sf3", "midi", "synthesizer"],
   "author": "Meng Lin <menglinmaker@gmail.com>",
   "repository": "https://github.com/menglinmaker/soundfont3.git",
   "license": "MIT",
@@ -69,7 +62,5 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": [
-    "defaults"
-  ]
+  "browserslist": ["defaults"]
 }
