--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@menglinmaker/soundfont3",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A SoundFont3 parser for Node.js and web browsers",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
+  "types": "./dist/index.d.ts",
   "exports": {
     "import": {
       "types": "./dist/index.d.mts",
